Edited Practice 1 name to Practice1

--- a/activities/practice.html
+++ b/activities/practice.html
@@ -11,3 +11,13 @@
     </h3>
 </body>
 </html>
+
+Engagement assignments are what we do today  and are due every midnight of the day of our class. 
+Don't spend a lot of time in doing your engagement assignment. What if you miss one? canvas drops 4 lowest of your scores. 
+Let brother slade know if you're sick... Engagement Assignments are also called activities..
+
+3. What time are porjects due? We will be having projects starting this wednesday but is due by friday. For late submission, we are given
+4 chances to submit our projects but it can be used if you want to increase your grade on your other projects.
+
+for tags, you can upload it on your website.
+
