--- a/activities/git.html
+++ b/activities/git.html
@@ -31,8 +31,8 @@
     <p>
         Engagement assignments are also called activities. Engagement assignments are 
         due every 11:59 PM or every midnight of the day of our class. Remember to not spend a
-        lot of time doing your assignments. It's okay to miss some assignments but let brother
-        slade know.
+        lot of time doing your assignments. It's okay to miss some assignments because you are sick
+        but let brother slade know.
     </p>
 
     <h4>
@@ -41,20 +41,11 @@
     </h4>
 
     <p>
-
+        1. The < head > tag is similar to a backstage of a website where it holds informations about the page, but not the contents people see. <br>
+        2. The < body > tag is where all the visible contents of a webpage goes. <br>
+        3. The < p > tag is used to create a paragraph in HTML.Technically, it's for writing a blocks of text. <br>
+        4. The < h > tags is used to create a heading. headings have a range from h1 to h6. The higher the number the smaller the fonts.
     </p>
 
-    <h4>
-        4.
-    </h4>
-
-    <p>
-
-    </p>
-
-    What time are engagement assignments due? Can you turn them in late? What if you miss one?
-What time are projects due? Can you turn them in late? What if you miss one?
-Describe the tags we discussed today. Remember, you can look at the lecture notes for a video that reviews what we discussed.
-Paste the link to your web page. If you don't get it working, paste your questions. See the tutors tonight for help.
 </body>
 </html>
