--- a/activities/htmltags.html
+++ b/activities/htmltags.html
@@ -9,7 +9,7 @@
     <h1>Friday Sept 12, 2025 Discussion: HTML Tags</h1>
     <hr>
     <h4> What is < BR > tag? </h4>
-    <p>BR stands for break. Break tags are used to mose your next words in a new line.</p>
+    <p>BR stands for break. Break tags are used to move your next words in a new line.</p>
     <h4> What is < HR > tag? </h4>
     <p>HR stands for horizontal. Horizontal tag is used to create a horizontal line in your webpage.</p>
     <h4>What is a < blockquote >?</h4>
