created a new page which was stored in project and connected two pages for the project. All it needs is the HTML validator

--- a/projects/InterestsPage.html
+++ b/projects/InterestsPage.html
@@ -12,21 +12,28 @@
 
     <header>
         <h1> Star Trek: Discovery</h1>
-        <nav>Information, Hero Page</nav>
+        <nav><a href="InterestsPage.html">Information</a>, <a href="heropage.html">Hero Page</a></nav>
         <hr>
-
-        Note: create a relative tag in your navigation bar to your second page (described below). You should also include a link that links to the current page (this page). You can remove the link and just show text if you want to highlight which page you are on.
     </header>
 
-    <body>
-        <h3>(Explain my interest )Why I like Star Trek: Discovery</h3>
-        <p></p>
-        <h3>What is a relative link and absolute link?</h3>
-        <p>A relative link means a way to tell the browser where it can find another file such as webpages, images, and etc that is related to the current file. In addition, instead of providing the whole web address you will only need to provide the path of the files current location. On the other hand, absolute link means you have to provide a complete URL that includes the protocol, the domain name, and the specific path to a file or a website. In short, using absolute links makes sure that when a user click a link, it make sures that they reach the correct destination. </p>
+    <main>
+        <h3>Interest and Why I like Star Trek: Discovery</h3>
 
-        
-        <p>Explanation must be inputed here. Include a relative link to your first assignment. Also, explain here as well what is absolute link and then add a link to an external website that is about your interest.</p>
-    </body>
+        <p>Aloha! My name is Jim and I'd be happy to share to you what I am interest in and how I was able to develop this interest in me. As a child, I've been exposed to numerous gadgets and devices like landphones, printers, and computers. I can still vividly remember  the time when I first played a web-based game called "Pokemon Crater" and it made me excited when I play it with my siblings. In addition to this, I can also remember the days how I toyed and destroy the floppy disk in our homes because I was curious. I was scolded by my dad but I get to know what was the thing that was inside. This early, exposure is why I had a great interest in learning computers, how to code, and other gadgets that common in our generation. In addition to these, I believe my early exposure to technology is why I start to appreciate sci-fi movies; a genre that explores infinite possibilities related to technology, a possibility of what human can achieve, and how our actions can affect in a massive or global scale. With these descriptions mentioned, is why I started watching Star-Trek series. </p>
+
+        <p>The first three movies of Star-Trek in the 21st century is the reason why I started watching their newest series like Star-Trek: Picard, Star-Trek: Next Generations, and especially Star-Trek: Discovery. But, out of these three the best series for me would be the star-trek-discovery because of few different reasons:</p>
+        <p>1. I love the plot of the series; It shows us how turning to our greatest fear can bring destruction around us and how a simple glimmer of hope can help us attain a better outcome in our protracted situations. In addition to this, It teaches us to face our circumstances and difficult situations despite the presence of fear. To face our greatest unknowns, and how learning cultures and how various species interact with their own can bring intercultural peace and unity between diverse races.</p>
+        <p>2. Technology; This movies just inspires me the possiblity technology and it's advancement. </p>
+        <p>3. Graphics; I love how they portay what space-time travel looks like and It also shows me the difference of how people's life is kinda different to our life now especially with regards to what we see in the movies/series. If before, its all black and white, now there's a lot of things that we can do with the use of CGI.</p>
+
+        <h3>What is a relative link and absolute link?</h3>
+
+        <p>A relative link means a way to tell the browser where it can find another file such as webpages, images, and etc that is related to the current file. In addition, instead of providing the whole web address you will only need to provide the path of the files current location or the name of the page/file itself. On the other hand, absolute link means you have to provide a complete URL that includes the protocol, the domain name, and the specific path to a file or a website. In short, using absolute links makes sure that when a user click a link, it make sures that they reach the correct destination. </p>
+
+        <p>Click this <a href="https://www.startrek.com/series/star-trek-discovery">link</a> to see an example of absolute link. Note: The link will direct you to an external link which is an example of absolute link.</p>
+        <p>Click this <a href="ProfilePage.html">link</a> to see an example of relative link. Note: The link will direct you to another page that was created by Markham Abor. The purpose of this link is to show an example of what is relative link.</p>
+
+    </main>
 
     <footer>
         &copy; Markham Abor 
@@ -34,14 +41,3 @@
     </footer>
 </body>
 </html>
-
-<p>Note: 
-
-    This page should highlight a famous person that is involved in your selected interest. This could be an athlete, actor/actress, etc. Besides the content you should correctly use the following:
-
-This page should use the same structural tags (HEADER,NAV,MAIN,FOOTER) as the interests page. The content in the NAV and FOOTER should be the same as the previous page, except which link is just text in the navigation bar (if you did that). The HEADER CONTENT should appear the same as the previous page, but a title/subtitle should be changed to indicate this page is about the hero. The two navigation links should remain in the same order.
-In the main tag should include the following:
-A paragraph tag, with text about the "hero". DO NOT COPY TEXT FROM ANOTHER SITE.
-A description list  (DL with DD DT tags)with information about the hero. (Could be a list of movies and what roles they played, or seasons with stats for an athlete, etc.) You must include at least 3 list items.
-
-</p>
