--- a/projects/heropage.html
+++ b/projects/heropage.html
@@ -36,7 +36,7 @@
 
             <dt>Planets and Affiliation</dt>
             <dd>Earth</dd>
-            <dd>Vulan</dd>
+            <dd>Vulcan</dd>
             <dd>United Federation of Planets Starfleet</dd>
             <dd>USS Shenzhou</dd>
             <dd>USS Discovery</dd>
