small changes were made in the spelling

--- a/projects/heropage.html
+++ b/projects/heropage.html
@@ -34,7 +34,7 @@
             <dd>Spock (Adoptive Brother); Deceased because they travelled to the future and her brother was left in the present. </dd>
             <dd>Philippa Georgiou (Adoptive Mother); Mirror Universe</dd>
 
-            <dt>Planets and Affiliation</dt>
+            <dt>Planets and Affiliations</dt>
             <dd>Earth</dd>
             <dd>Vulcan</dd>
             <dd>United Federation of Planets Starfleet</dd>
