--- a/projects/heropage.html
+++ b/projects/heropage.html
@@ -16,7 +16,8 @@
         <h3> Hero Information</h3>
         <p>Name: Micheal Burnham</p>
         <p>She is the main character of the series Star-Trek: Discovery, who was portrayed by the actress Sonequa Martin-Green. She was originally a First Officer of the USS Shenzhou under Captain Philippa Georgiou but due to her acts of mutiny she was stripped from her ranks and was sentenced to life imprisonment. She was later recruited by the captain of USS Discovery named Gabriel Lorca because of her skills, talent, and was seen as an asset so she was assigned as a science specialist. Later she was introduced as a xeno-anthropologist helping starfleet understand and connect with new cultures and species in outer space especially in sectors where it hasn't been explored by past vessels of Starfleet.</p>
-
+        
+        <h3> Facts</h3>
         <dl>
             <dt>Occupation:</dt>
             <dd>Xeno-Anthropologist</dd>
@@ -25,14 +26,14 @@
             <dd>Captain of ISS: Shenzhou</dd>
             <dd>Science Officer of USS: Discovery</dd>
             <dd>Captain of USS: Discovery</dd>
-            <dd>Admiral of Starfleet</dd>
+            <dd>Admiral of Starfleet</dd> <br>
 
             <dt>Family:</dt>
             <dd>Mike Burnham (Father); Deceased</dd>
             <dd>Gabrielle Burnham (Mother); Deceased</dd>
             <dd>Amanda Grayson (Adoptive Mother); Deceased</dd>
             <dd>Spock (Adoptive Brother); Deceased because they travelled to the future and her brother was left in the present. </dd>
-            <dd>Philippa Georgiou (Adoptive Mother); Mirror Universe</dd>
+            <dd>Philippa Georgiou (Adoptive Mother); Mirror Universe</dd> <br>
 
             <dt>Planets and Affiliations</dt>
             <dd>Earth</dd>
