added something with regards to the rules of relative links.

--- a/activities/links.html
+++ b/activities/links.html
@@ -29,7 +29,10 @@
         <p> This link directs you to the <a href="StructuralTags.html">Structural Tags Page.</a> </p>
 
         <h3>6. List the 3 rules with relative links.</h3>
-        <p> </p>
+        <p> 1. You can just add the name of the file if you're work is on the same folder as your works.</p>
+        <p> 2. To link another file inside a folder, just write down the folder where it's stored and then write the file you want.</p>
+        <p> 3. To go back from the file that's inside your folder, you have to use ".." then add"the file name" to go back. two dots means going back up a folder.</p>
+        <p> 4. in the a tag, if you use "/" this will start you over when it comes to link... This will put you in the root file.</p>
 
         <h3>7. Link to your last project.</h3>
         <p> This link directs you to the <a href="http://127.0.0.1:3000/projects/InterestsPage.html?serverWindowId=45215f95-8b16-4a46-9758-bd64e4350dc2">Profile Page Project</a> </p>
@@ -37,7 +40,7 @@
         <h3>8. Do links always need to be inside a NAV tag?</h3>
         <p> No, links can be everywhere in your webpage. Links on NAV tag means what are the following things inside your webpages; to make it easier to navigate your page.</p>
 
-        <p>Note: Every file has default document</p>
+        <p>Note: Every file has default document... Domain name points to your right server. </p>
 
     </main>
 </body>
