--- a/projects/heropage.html
+++ b/projects/heropage.html
@@ -1,53 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Page</title>
-</head>
-<body>
-    <header>
-        <h1> Star Trek: Discovery</h1>
-        <nav><a href="InterestsPage.html">Information</a>, <a href="heropage.html">Hero Page</a></nav>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hero Page</title>
+    </head>
+    <body>
+        <header>
+            <h1 id="StarTrek"> STAR TREK</h1>
+            <h1 id="Discovery">DISCOVERY</h1>
+            <hr>
+            <nav>
+                <a class="navigation" href="InterestsPage.html">INTEREST PAGE</a>
+                <a class="navigation" href="heropage.html">HERO PAGE</a>
+            </nav>
+
+        <link rel="stylesheet" href="interestpage.css">
         <hr>
-    </header>
+        </header>
 
-    <main>
-        <h3> Hero Information</h3>
-        <p>Name: Micheal Burnham</p>
-        <p>She is the main character of the series Star-Trek: Discovery, who was portrayed by the actress Sonequa Martin-Green. She was originally a First Officer of the USS Shenzhou under Captain Philippa Georgiou but due to her acts of mutiny she was stripped from her ranks and was sentenced to life imprisonment. She was later recruited by the captain of USS Discovery named Gabriel Lorca because of her skills, talent, and was seen as an asset so she was assigned as a science specialist. Later she was introduced as a xeno-anthropologist helping starfleet understand and connect with new cultures and species in outer space especially in sectors where it hasn't been explored by past vessels of Starfleet.</p>
-        
-        <h3> Facts</h3>
-        <dl>
-            <dt>Occupation:</dt>
-            <dd>Xeno-Anthropologist</dd>
-            <dd>First Officer of USS: Discovery</dd>
-            <dd>Science Specialist of USS: Discovery</dd>
-            <dd>Captain of ISS: Shenzhou</dd>
-            <dd>Science Officer of USS: Discovery</dd>
-            <dd>Captain of USS: Discovery</dd>
-            <dd>Admiral of Starfleet</dd> <br>
+        <main>
+            <h2> Hero Information</h2>
+            <h3>Name: Micheal Burnham</h3>
+            <p>She is the main character of the series Star-Trek: Discovery, who was portrayed by the actress Sonequa Martin-Green. She was originally a First Officer of the USS Shenzhou under Captain Philippa Georgiou but due to her acts of mutiny she was stripped from her ranks and was sentenced to life imprisonment. She was later recruited by the captain of USS Discovery named Gabriel Lorca because of her skills, talent, and was seen as an asset so she was assigned as a science specialist. Later she was introduced as a xeno-anthropologist helping starfleet understand and connect with new cultures and species in outer space especially in sectors where it hasn't been explored by past vessels of Starfleet.</p>
+            
+            <h3> Facts</h3  >
+            <dl>
+                <dt>Occupation:</dt>
+                <dd>Xeno-Anthropologist</dd>
+                <dd>First Officer of USS: Discovery</dd>
+                <dd>Science Specialist of USS: Discovery</dd>
+                <dd>Captain of ISS: Shenzhou</dd>
+                <dd>Science Officer of USS: Discovery</dd>
+                <dd>Captain of USS: Discovery</dd>
+                <dd>Admiral of Starfleet <br> </dd> 
 
-            <dt>Family:</dt>
-            <dd>Mike Burnham (Father); Deceased</dd>
-            <dd>Gabrielle Burnham (Mother); Deceased</dd>
-            <dd>Amanda Grayson (Adoptive Mother); Deceased</dd>
-            <dd>Spock (Adoptive Brother); Deceased because they travelled to the future and her brother was left in the present. </dd>
-            <dd>Philippa Georgiou (Adoptive Mother); Mirror Universe</dd> <br>
+                <dt>Family:</dt>
+                <dd>Mike Burnham (Father); Deceased</dd>
+                <dd>Gabrielle Burnham (Mother); Deceased</dd>
+                <dd>Amanda Grayson (Adoptive Mother); Deceased</dd>
+                <dd>Spock (Adoptive Brother); Deceased because they travelled to the future and her brother was left in the present. </dd>
+                <dd>Philippa Georgiou (Adoptive Mother); Mirror Universe <br></dd>
 
-            <dt>Planets and Affiliations</dt>
-            <dd>Earth</dd>
-            <dd>Vulcan</dd>
-            <dd>United Federation of Planets Starfleet</dd>
-            <dd>USS Shenzhou</dd>
-            <dd>USS Discovery</dd>
-            <dd>ISS Shenzhou</dd>
+                <dt>Planets and Affiliations:</dt>
+                <dd>Earth</dd>
+                <dd>Vulcan</dd>
+                <dd>United Federation of Planets Starfleet</dd>
+                <dd>USS Shenzhou</dd>
+                <dd>USS Discovery</dd>
+                <dd>ISS Shenzhou</dd>
 
-        </dl>
-    </main>
-    <hr>
-    <footer>
-        &copy; Markham Abor All Rights Reserved
-    </footer>
-</body>
-</html>
+            </dl>
+        </main>
+        <hr>
+        <footer>
+            &copy; Markham Abor All Rights Reserved
+        </footer>
+    </body>
+    </html>
