--- a/activities/webgraphics.html
+++ b/activities/webgraphics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engagement - Web Graphics</title>
-    
+            <link rel="shortcut icon" href="/activities/IMAGES-Folder/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -15,9 +15,8 @@
         <h1>Questions:</h1>
 
         <h2>Include 1 image using an IMG tag.</h2>
-            <img src="/activities/IMAGES-Folder/nature.jpg" alt="image of a nature after a rain">
-        <h2>Create a Favion and link to it using a link tag.</h2>
-            <link rel="shortcut icon" href="/activities/IMAGES-Folder/favicon.ico" type="image/x-icon">
+            <img src="/activities/IMAGES-Folder/nature.jpg" alt="Lake.jpg">
+            
         <h2>Answer the following questions on your page:</h2>
 
             <h3>1. What kind of photos are good to encode using JPEG?</h3>
