--- a/projects/project4/pagelayout.html
+++ b/projects/project4/pagelayout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Trek Discovery</title>
-    <link rel="stylesheet" href="pagelayout.css">
+    <link rel="stylesheet" href="pagelayout2.css">
 
 </head>
 <body>
@@ -13,10 +13,10 @@
         <h1 class="discovery">DISCOVERY</h1>
         
         <nav>
-            <a href="pagelayout.html">Home</a>
-            <a href="pagelayout.html">Latest</a>
-            <a href="pagelayout.html">Explore</a>
-            <a href="pagelayout.html">Shop</a>
+            <a class="navigation active" href="pagelayout.html">Home</a>
+            <a class="navigation" href="#">Latest</a>
+            <a class="navigation" href="#">Explore</a>
+            <a class="navigation" href="#">Shop</a>
         </nav>
     </header>
 
@@ -34,11 +34,11 @@
         </p>
         </figure>
 
-
+        <div class="clear"></div>
     </main>
 
     <footer>
-        &copy; Markham Abor All Rights Reserved. 2025
+        &copy; 2025 Markham Abor
     </footer>
 
 </body>
