project 4 is done, I can now submit it.

--- a/activities/positioning.html
+++ b/activities/positioning.html
@@ -18,6 +18,7 @@
     </header>
 
     <main>
+
         <h1>Questions: </h1>
         <h2>1. What is normal flow in HTML?</h2>
         <p> - </p>
@@ -46,12 +47,12 @@
         <h2>5. Where can you find videos to review what we talked about in class?</h2>
         <p> - Go to home page, click lecture notes, and then just scroll down and look.</p>
 
-        <p>Note: We cannot add height, width, and other stuff on inline code. The image that we have is an inline block tag but it's advance so we're not going to do it. Figure tag wants the whole width. Figure tags has a built-in margin, we can remove it by adjusting the width. In the anchor tag, if you put # in the link, this makes it valid when you put it in the validator. Pseudo class can be hover</p>
-
-        
+        <p>Note: We cannot add height, width, and other stuff on inline code. The image that we have is an inline block tag but it's advance so we're not going to do it. Figure tag wants the whole width. Figure tags has a built-in margin, we can remove it by adjusting the width. In the anchor tag, if you put # in the link, this makes it valid when you put it in the validator. Pseudo class can be hover. </p>
+        <p>Fragment identifier, It is through the use of the ID property or tag? then in css use # (hashtag) </p>
 
 
     </main>
+    
 
     <footer>
         &copy; 2025 Abor Markham.
