Engagement, Submit responsive2

--- a/activities/responsive.html
+++ b/activities/responsive.html
@@ -42,19 +42,19 @@
 
                 <article class="card">
                     <img src="fire.png" alt="Cartoon picture of fire.">
-                    <h3>CSS sample picture</h3>
+                    <h3>1st sample picture</h3>
+                    <p>some text about a fire for css.</p>
+                    <a href="#">More Info</a>
+                </article>
+                <article class="card main-card">
+                    <img src="fire.png" alt="Cartoon picture of fire.">
+                    <h3>2nd sample picture</h3>
                     <p>some text about a fire for css.</p>
                     <a href="#">More Info</a>
                 </article>
                 <article class="card">
                     <img src="fire.png" alt="Cartoon picture of fire.">
-                    <h3>CSS sample picture</h3>
-                    <p>some text about a fire for css.</p>
-                    <a href="#">More Info</a>
-                </article>
-                <article class="card">
-                    <img src="fire.png" alt="Cartoon picture of fire.">
-                    <h3>CSS sample picture</h3>
+                    <h3>3rd sample picture</h3>
                     <p>some text about a fire for css.</p>
                     <a href="#">More Info</a>
                 </article>
