project 6 done submit it now.

--- a/activities/responsive2.html
+++ b/activities/responsive2.html
@@ -27,7 +27,7 @@
         <p>The one which will takes priotirty would the last one on your code.  </p>
 
         <h2>3. How do you change the CSS for a web page displayed on a phone?</h2>
-        <p>using @media ONLY screen AND (*the width of your phone) makes it possible to change what your website looks like on your phone. </p>
+        <p>using @media ONLY screen AND (*the width of your phone) makes it possible to change what your website looks like on your phone. What's inside the parenthesis </p>
 
         <p>Note: </p>
     </main>
