--- a/projects/project8/forms.html
+++ b/projects/project8/forms.html
@@ -165,6 +165,9 @@
     <footer>
         &copy; 2025 Markham Abor
     </footer>
-
+    <script>
+        document.getElementById('myForm')
+    </script>
+<!-- Javascript are written below their html -->
 </body>
 </html>
