changes were made.

--- a/activities/formprocessfiles/formprocessingwithjavascript.html
+++ b/activities/formprocessfiles/formprocessingwithjavascript.html
@@ -24,6 +24,11 @@
         <h2>What is the most popular front-end js library today?</h2>
         <p>Meta is the most popular JS library today, it is an open source and what they use is react. Most of your mobile application are created with react. There's an acalled electrum that helps you create a desktop application.</p>
 
+
+        <h2>What is AJAX?</h2>
+        <p>It is a way to send and retrieve an information, example would be in the google. If you're planning to search something on google. In the search bar it will show up some suggestions. this becomes possible because of the use of AJAX.</p>
+        <h2>Why do you put your JS Code in a separate file?</h2>
+        <p>For it to be organized, this way your html file is on a different file than your other files and one of the benefit for it is you can use recycle it, like you need to use the code in a different file.</p>
     </main>
 
     <footer>
