--- a/projects/project8/forms.html
+++ b/projects/project8/forms.html
@@ -165,9 +165,7 @@
     <footer>
         &copy; 2025 Markham Abor
     </footer>
-    <script>
-        document.getElementById('myForm')
-    </script>
+    <script src="forms.js"></script>
 <!-- Javascript are written below their html -->
 </body>
 </html>
