--- a/projects/project8/forms.html
+++ b/projects/project8/forms.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>ACCOUNT CREATION</h1>
+        <h1>SAMPLE ACCOUNT CREATION</h1>
     </header>
+
 
     <main>
 
         <div>
+
             <form action="formprocess.html" method = "post">
 
                 <fieldset class="fieldset2">
@@ -27,24 +29,6 @@
                     <div class="form-row">
                         <label for="accountlastname">Last Name:</label>
                         <input type="text" name="accountlastname" id="accountlastname">
-                    </div>
-
-                    <div class="check-row">
-                        <div class="spacer">Gender:</div>
-                            <label> <input type="radio" name="gender" id="Male">Male</label>
-                            <label> <input type="radio" name="gender" id="female">Female</label>
-                    </div>
-
-                    <div class="form-row">
-                        <label for="civilstatus">Civil Status:</label>
-                        <select name="civilstatus" id="civilstatus">
-                            <option value="Blank">---</option>
-                            <option value="Single">Single</option>
-                            <option value="Widowed">Widowed</option>
-                            <option value="Married">Married</option>
-                            <option value="Divorced">Divorced</option>
-                            <option value="partnership">Civil Partnership</option>
-                        </select>
                     </div>
 
                     <div class="form-row">
@@ -67,16 +51,111 @@
                         <input type="password" name="confirmpassword" id="confirmpassword">
                     </div>
 
+                </fieldset>
+
+
+                <fieldset class="fieldset1">
+                    <legend>PERSONAL DATA</legend>
+
+                    <div class="form-row">
+                        <label for="firstname">First Name:</label>
+                        <input type="text" name="firstname"  id="firstname"> 
+                    </div>
+
+                    <div class="form-row">
+                        <label for="lastname">Last Name:</label>
+                        <input type="text" name="lastname" id="lastname">
+                    </div>
+
+                    <div class="check-row">
+                        <div class="spacer">Gender:</div>
+                        <label> <input type="radio" name="gender" id="Male">Male</label>
+                        <label> <input type="radio" name="gender" id="female">Female</label>
+                    </div>
+
+                    <div class="form-row">
+                        <label for="age">Age:</label>
+                        <input type="number" name="age" id="age" min="10" max="130">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="date">Date of Birth:</label>
+                        <input type="date" name="date" id="date">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="birthplace">Place of Birth:</label>
+                        <input type="text" name="birthplace" id="birthplace">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="address">Complete Address:</label>
+                        <input type="text" name="address" id="address">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="phone">Phone Number:</label>
+                        <input type="tel" name="phone" id="phone">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="email">Email Address:</label>
+                        <input type="email" name="email" id="email">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="civilstatus">Civil Status:</label>
+                        <select name="civilstatus" id="civilstatus">
+                            <option value="Blank">---</option>
+                            <option value="Single">Single</option>
+                            <option value="Widowed">Widowed</option>
+                            <option value="Married">Married</option>
+                            <option value="Divorced">Divorced</option>
+                            <option value="partnership">Civil Partnership</option>
+                        </select>
+                    </div>
+
+                    <div class="form-row">
+                        <label for="fathername">Father's Name:</label>
+                        <input type="text" name="fathername"  id="fathername"> 
+                    </div>
+
+                    <div class="form-row">
+                        <label for="fdate">Date of Birth:</label>
+                        <input type="date" name="fdate" id="fdate">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="fbirthplace">Place of Birth:</label>
+                        <input type="text" name="fbirthplace" id="fbirthplace">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="mothername">Mother's Name:</label>
+                        <input type="text" name="mothername" id="mothername">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="mdate">Date of Birth:</label>
+                        <input type="date" name="mdate" id="mdate">
+                    </div>
+
+                    <div class="form-row">
+                        <label for="mbirthplace">Place of Birth:</label>
+                        <input type="text" name="mbirthplace" id="mbirthplace">  
+                    </div>
+
                     <div class="check-row">
                         <div class="spacer"></div>
-                            <label><input type="checkbox" value="TRUE"> I agree to the terms and condition </label>
+                        <label><input type="checkbox" value="TRUE"> I agree to the terms and condition of the creation of my biodata.</label>
                     </div>
 
                     <div class="form-row">
                         <input type="button" value="Sign Up">
                     </div>
-
                 </fieldset>
+
+                
 
             </form>
         </div>
